--- a/styles/style.css
+++ b/styles/style.css
@@ -516,8 +516,14 @@ html p {
   gap: 40px;
 }
 
-.leftSiteFooter svg {
-  margin: 10px;
+.leftSiteFooter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  margin-top: 12px;
+  margin-bottom: 24px;
+  gap: 30px;
 }
 
 .legal {
