--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -333,8 +333,11 @@ p {
   gap: 40px;
 }
 
-.leftSiteFooter svg {
-  margin: 10px;
+.leftSiteFooter {
+  @include displayFlex3(space-between, center, row);
+  margin-top: 12px;
+  margin-bottom: 24px;
+  gap: 30px;
 }
 .rightSiteFooter img {
   transition: all 0.5s ease;
